--- a/random.html
+++ b/random.html
@@ -16,7 +16,7 @@
 			<ul>
 				<li><a href = "index.html">About Me</a></li>
 				<li><a href = "family.html">My Family</a></li>
-				<li><a class="active"><a href = "random.html">Random Stuff</a></li>
+				<li class="active"><a href = "random.html">Random Stuff</a></li>
 				<li><a href = "si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
@@ -25,7 +25,7 @@
 
 	<p>Make sure you are doing the readings from the <a href = "www.w3schools.com/html/">W3 Schools HTML 
 		tutorial</a> as well as the readings from Shay Howe's
-		<a href = "https://learn.shayhowe.com/html-css/" a>HTML and CSS tutorial</a>.
+		<a href = "https://learn.shayhowe.com/html-css/">HTML and CSS tutorial</a>.
 
 	<p>Using the Piazza site is another great way to stay on top of your classwork</p>
 
