--- a/family.html
+++ b/family.html
@@ -13,8 +13,8 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href = "index.html">About Me</a></li>
-				<li class="active"><a href = "family.html">My Family</a></li>
+				<li class="active"><a href = "index.html" >About Me</a></li>
+				<li><a href = "family.html">My Family</a></li>
 				<li><a href = "random.html">Random Stuff</a></li>
 				<li><a href = "https://si.umich.edu/">UMSI</a></li>
 			</ul>
@@ -24,11 +24,11 @@
 
 	<main>
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br>
-			<img src = "images/wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake">
-			<img src = "images/badlands.jpg" width="1000" alt = "A boy and two girls stnading in front of a sign for the Ben Reifel Visitor Center">
-			<img src = "images/falling.jpg" width="25" alt = "A boy pretending to almost fall off a steep rock slope">
-			<img src = "images/rushmore.jpg" width="1000" alt = "View of Mount Rushmore">
-			<img src = "images/jewel_cave.jpg" width="25" alt = "A boy and two girls standing in front of a sign for Jewel Cave National Monument">
+			<img src = "images/wisconsin_dells.jpg" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake" width="25">
+			<img src = "images/badlands.jpg" alt = "A boy and two girls stnading in front of a sign for the Ben Reifel Visitor Center" width="1000">
+			<img src = "images/falling.jpg" alt = "A boy pretending to almost fall off a steep rock slope" width="25">
+			<img src = "images/rushmore.jpg" alt = "View of Mount Rushmore from a distance and zoomed in" width="1000">
+			<img src = "images/jewel_cave.JPG" alt = "A boy and two girls standing in front of a sign for Jewel Cave National Monument" width="25">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.<p>
 	</main>
 	Colleen van Lent &copy; 2024
